plugins {
    id 'java-library'
    id 'maven-publish'
}

def getVersionName = { ->
    return "3.0.0"
}

def getArtifactId = { ->
    return "easyhttp"
}

group = 'xds.lib'
version = getVersionName()

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

tasks.withType(Javadoc).configureEach {
    options.encoding = "UTF-8"
    options.addStringOption("Xdoclint:none", "-quiet")
    failOnError = false
}

tasks.named("jar", Jar) {
    archiveBaseName.set(getArtifactId())
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/ilvm/easy-http"
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN_RW")
            }
        }
    }

    publications {
        gpr(MavenPublication) {
            from components.java

            groupId = project.group
            artifactId = getArtifactId()
            version = project.version
        }
    }
}
